syntax = "proto3";

package file;
import "google/protobuf/empty.proto"; //Geriye dönüş değeri olmayan metotlar için kullanıyoruz.

service FileService {
    rpc FileDownLoad (FileInfo) returns (stream BytesContent);
    rpc FileUpLoad (stream BytesContent) returns(google.protobuf.Empty); //Geriye Empty dönüyor, yani dönüş değeri yok gibi düşünülebilir.
    rpc GetFilePath (FileInfo) returns (FilePath);
}

message FileInfo{
    string fileName = 1;
    string fileExtension = 2;
}

message BytesContent{
    int64 fileSize = 1;
    bytes buffer = 2;
    int32 readedByte = 3;
    FileInfo info = 4;
}

message FilePath{
    string filePath = 1;
}